--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "@rails/webpacker": "4.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.5.3",
+    "framework-utils": "^0.3.4",
+    "history": "^5.0.0",
     "jquery": "^3.5.1",
+    "moveable": "^0.21.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
+    "react-frame": "^2.2.22",
+    "react-icons": "^3.11.0",
+    "react-moveable": "^0.24.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
+    "scenejs": "^1.4.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
